Some basic components and navbar added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.5",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
