--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.0.14",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
