Event added and user permission setted

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS=
+APP_KEYS=RWmUwvTfAtAVDrKV42Aqqg==,ziGjQ6o4txkcpahNsrcgwg==,ruJ2hLptol85ey5OhPhr0w==,ixuqPnTZRHi2RwW9/cJsIQ==
+API_TOKEN_SALT=RbTt7BvCsdb5XjyB7m2Ysw==
+ADMIN_JWT_SECRET=73kYgTUaE5mPyvZanwrb6A==
+JWT_SECRET=ALVS6KFWa3AkNkjw6JT7nA==
