--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-carousel": "^0.1.40",
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
