--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.5",
+    "@vuepic/vue-datepicker": "^3.2.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "pinia": "^2.0.14",
     "qs": "^6.10.5",
+    "swiper": "^8.2.4",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
     "vue-toastification": "^2.0.0-rc.5",
-    "vue3-carousel": "^0.1.40",
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
